[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
anyhow = "1.0.96"
rand = "0.9.0"
tokio = { version = "1.44.2", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3"
async-task = "4.4.0"
futures-lite = "2.6.0"
once_cell = "1.21.3"
flume = "0.11.1"
