[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"
anyhow = "1.0.98"
rand = "0.9.1"
tokio = { version = "1.44.2", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "signal",
] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures-util = "0.3"
async-task = "4.4.0"
futures-lite = "2.6.0"
once_cell = "1.21.3"
flume = "0.11.1"
hyper = { version = "0.14.26", features = [
    "client",
    "runtime",
    "http1",
    "http2",
] }
smol = "2.0.2"
async-native-tls = "0.5.0"
http = "0.2.9"
mio = { version = "0.8.8", features = ["net", "os-poll"] }
clearscreen = "4.0.1"
device_query = "1.1.3"
futures = "0.3.28"
